src/test/deca/context/invalid/test_class/return_void.deca
// Description:
//    Program returning void type
//
// Results:
//    error
//
// History:
//    Created on 13/01/2025

class B{
    void x(){
        print(12);
    }
    void m(){
        return x();
    }
}
{
    B b = new B();
}
